Added some gallery componentry and troubleshoot shoelace ui styling

--- a/styles.scss
+++ b/styles.scss
@@ -247,6 +247,10 @@ background-color: purple;
     width: 100%;
 }
 
+// .card-basic::host {
+//     --padding: 0;
+// }
+
 // .card-overview small {
 //     color: var(--sl-color-gray-500);
 // }
