--- a/styles.css
+++ b/styles.css
@@ -280,6 +280,40 @@ sl-card body {
   width: 100%;
 }
 
+sl-card::part(base) {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 0;
+  margin: 0;
+  -webkit-box-shadow: 15px 15px 10px 0px rgba(50, 50, 50, 0.75);
+          box-shadow: 15px 15px 10px 0px rgba(50, 50, 50, 0.75);
+}
+
+sl-card::part(body) {
+  height: 100%;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 0;
+  margin: 0;
+}
+
 .cardImageContainer {
   max-height: 50%;
 }
