--- a/styles.scss
+++ b/styles.scss
@@ -229,8 +229,8 @@ sl-card {
     max-height: 100%;
 }
 
-sl-card body{
-background-color: purple;
+sl-card body {
+    background-color: purple;
 }
 
 .card {
@@ -247,9 +247,26 @@ background-color: purple;
     width: 100%;
 }
 
-// .card-basic::host {
-//     --padding: 0;
-// }
+sl-card::part(base) {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    margin: 0;
+    box-shadow: 15px 15px 10px 0px rgba(50, 50, 50, 0.75);
+}
+
+sl-card::part(body) {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    margin: 0;
+}
 
 // .card-overview small {
 //     color: var(--sl-color-gray-500);
