--- a/styles.scss
+++ b/styles.scss
@@ -135,7 +135,7 @@ body::-webkit-scrollbar {
 .contentSection {
     position: relative;
     width: 100vw;
-    height: 90vh;
+    min-height: 90vh;
     display: flex;
     justify-content: center;
     // background-color: rgba(81, 124, 255, 1);
@@ -237,7 +237,7 @@ sl-card body {
     position: relative;
     margin: 10% 2% 2% 2%;
     max-width: 30vw;
-    max-height: 50%;
+    max-height: 50vw;
     color: black;
     box-shadow: 15px 15px 10px 0px rgba(50, 50, 50, 0.75);
 }
@@ -268,18 +268,31 @@ sl-card::part(body) {
     margin: 0;
 }
 
-// .card-overview small {
-//     color: var(--sl-color-gray-500);
-// }
+.card-basic {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
-// .card-overview [slot="footer"] {
-//     display: flex;
-//     justify-content: space-between;
-//     align-items: center;
-// }
+.cardContainer {
+    padding: 2%;
+    position: relative;
+    margin-top: 5vw;
+    width: 20vw;
+    height: auto;
+    z-index: 2;
+}
 
 .cardImageContainer {
     max-height: 50%;
+    max-width: 50%;
+}
+
+.cardImage {
+    width: 100%;
+    height: 100%;
 }
 
 .contentImageContainer {
@@ -311,6 +324,46 @@ sl-card::part(body) {
 
 [class*="col-"] {
     width: 100%;
+}
+
+@media only screen and (min-width: 480px) {
+    /* For mobiles: */
+    .col-xs-1 {
+        width: 8.33%;
+    }
+    .col-xs-2 {
+        width: 16.66%;
+    }
+    .col-xs-3 {
+        width: 25%;
+    }
+    .col-xs-4 {
+        width: 33.33%;
+    }
+    .col-xs-5 {
+        width: 41.66%;
+    }
+    .col-xs-6 {
+        width: 50%;
+    }
+    .col-xs-7 {
+        width: 58.33%;
+    }
+    .col-xs-8 {
+        width: 66.66%;
+    }
+    .col-xs-9 {
+        width: 75%;
+    }
+    .col-xs-10 {
+        width: 83.33%;
+    }
+    .col-xs-11 {
+        width: 91.66%;
+    }
+    .col-xs-12 {
+        width: 100%;
+    }
 }
 
 @media only screen and (min-width: 600px) {
