--- a/styles.css
+++ b/styles.css
@@ -377,6 +377,36 @@ sl-card::part(body) {
   width: 100%;
 }
 
+.livingSVG {
+  width: 100%;
+  height: 100%;
+}
+
+.footerIconsContainer {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  z-index: 2;
+}
+
+.footerIconDiv {
+  margin: auto 5vw auto 5vw;
+  max-width: 15vw;
+  max-height: 15vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 @media only screen and (min-width: 480px) {
   /* For mobiles: */
   .col-xs-1 {
