--- a/styles.scss
+++ b/styles.scss
@@ -349,11 +349,11 @@ height:100%;
 
 .footerIconDiv {
     // background-color: aqua;
-    margin: auto 5vw auto 5vw; 
+    margin: auto; 
     max-width: 15vw;
     max-height: 15vw;
-    display:flex;
-    align-items: center;
+    // display:flex;
+    // align-items: center;
     // position:relative;
     // padding:auto;
 }
