--- a/styles.css
+++ b/styles.css
@@ -175,6 +175,15 @@ body::-webkit-scrollbar {
   background-color: #1d80ab;
 }
 
+.contentContainer {
+  color: black;
+  position: relative;
+  margin: auto;
+  max-width: 80%;
+  max-height: 80%;
+  background-color: seashell;
+}
+
 .contentSectionBG {
   position: absolute;
   max-width: 100vw;
@@ -273,7 +282,7 @@ sl-card body {
 .card {
   position: relative;
   margin: 10% 2% 2% 2%;
-  max-width: 30vw;
+  max-width: 10vw;
   max-height: 50vw;
   color: black;
   -webkit-box-shadow: 15px 15px 10px 0px rgba(50, 50, 50, 0.75);
