--- a/styles.scss
+++ b/styles.scss
@@ -249,7 +249,7 @@ sl-card body {
 .card {
     position: relative;
     margin: 10% 2% 2% 2%;
-    max-width: 10vw;
+    max-width: 20vw;
     max-height: 50vw;
     color: black;
     box-shadow: 15px 15px 10px 0px rgba(50, 50, 50, 0.75);
@@ -299,8 +299,11 @@ sl-card::part(body) {
 }
 
 .cardImageContainer {
-    max-height: 50%;
-    max-width: 50%;
+    height: 50%;
+    width: 100%;
+    display:flex;
+    justify-content:center;
+    align-items: center;
 }
 
 .cardImage {
@@ -310,6 +313,30 @@ sl-card::part(body) {
 
 .contentImageContainer {
     max-height: 50%;
+    width: 100%;
+}
+
+.card-overview::part(base) {
+    display: block;
+    align-items: center;
+    justify-content: center;
+    // background-color: chartreuse;
+    // width: 400px;
+}
+
+.card-overview::part(body) {
+    // width: 100%;
+    display: block;
+    align-items: center;
+    justify-content: center;
+    // background-color: chartreuse;
+    // width: 400px;
+}
+
+.dementiaTypeCard {
+    background-color: yellow;
+    width: 90%; // test
+    margin: auto;
 }
 
 .hidden {
