Fixed content footer curl display Kind of... There was a small tear (approx. 1px) in the butting of the c ontent and the footer curl. Shifted footer curl up by 1px to hide the tear.

--- a/styles.css
+++ b/styles.css
@@ -196,7 +196,8 @@ body::-webkit-scrollbar {
 .backgroundImage {
   position: relative;
   width: 100vw;
-  top: -20vw;
+  top: -1px;
+  height: auto;
 }
 
 .contentSectionHeading {
