--- a/styles.scss
+++ b/styles.scss
@@ -168,8 +168,8 @@ body::-webkit-scrollbar {
 .backgroundImage {
     position: relative;
     width: 100vw;
-    top: -20vw;
-    // height: auto;
+    top: -1px;
+    height: auto;
     // z-index: 2;
 }
 
