--- a/styles.scss
+++ b/styles.scss
@@ -199,6 +199,8 @@ body::-webkit-scrollbar {
 
 .rttFlower {
     display: flex;
+    max-width: 10vw;
+    max-height: 10vw;
     align-items: center;
     justify-content: center;
     position: absolute;
@@ -252,7 +254,7 @@ sl-card body {
     max-width: 20vw;
     max-height: 50vw;
     color: black;
-    box-shadow: 15px 15px 10px 0px rgba(50, 50, 50, 0.75);
+    // box-shadow: 15px 15px 10px 0px rgba(50, 50, 50, 0.75);
 }
 
 .card-overview {
@@ -296,13 +298,14 @@ sl-card::part(body) {
     width: 20vw;
     height: auto;
     z-index: 2;
+    color: black;
 }
 
 .cardImageContainer {
     height: 50%;
     width: 100%;
-    display:flex;
-    justify-content:center;
+    display: flex;
+    justify-content: center;
     align-items: center;
 }
 
@@ -334,9 +337,13 @@ sl-card::part(body) {
 }
 
 .dementiaTypeCard {
-    background-color: yellow;
-    width: 90%; // test
+    // background-color: yellow;
+    // width: 90%; // test
     margin: auto;
+}
+
+.centeredText {
+    text-align: center;
 }
 
 .hidden {
