Commit for testing with cpanel deployment

--- a/styles.scss
+++ b/styles.scss
@@ -339,7 +339,7 @@ sl-card::part(body) {
 .dementiaTypeCard {
     // background-color: yellow;
     // width: 90%; // test
-    margin: auto;
+    // margin: auto;
 }
 
 .centeredText {
