Started adding content to Dementia among us section

--- a/styles.css
+++ b/styles.css
@@ -176,12 +176,10 @@ body::-webkit-scrollbar {
 }
 
 .contentContainer {
-  color: black;
   position: relative;
   margin: auto;
   max-width: 80%;
   max-height: 80%;
-  background-color: seashell;
 }
 
 .contentSectionBG {
@@ -201,8 +199,10 @@ body::-webkit-scrollbar {
 }
 
 .contentSectionHeading {
+  font-size: 2rem;
+  font-weight: 900;
   position: absolute;
-  top: 2%;
+  top: 5vw;
 }
 
 .rttFlower::part(base) {
@@ -395,6 +395,41 @@ sl-card::part(body) {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+.prevelanceContainer {
+  padding: 2% 0 2% 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.flowerBulletPointContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.prevelanceText {
+  margin-left: 1%;
+  font-weight: 800;
+}
+
+.bulletFlower {
+  width: 3vw;
+  height: 3vw;
 }
 
 .centeredText {
