--- a/styles.scss
+++ b/styles.scss
@@ -147,12 +147,12 @@ body::-webkit-scrollbar {
 }
 
 .contentContainer {
-    color: black;
+    // color: black;
     position: relative;
     margin: auto;
     max-width: 80%;
     max-height: 80%;
-    background-color: seashell;
+    // background-color: seashell;
 }
 
 .contentSectionBG {
@@ -174,8 +174,10 @@ body::-webkit-scrollbar {
 }
 
 .contentSectionHeading {
+    font-size: 2rem;
+    font-weight: 900;
     position: absolute;
-    top: 2%;
+    top: 5vw;
 }
 
 .rttFlower::part(base) {
@@ -340,6 +342,31 @@ sl-card::part(body) {
     // background-color: yellow;
     // width: 90%; // test
     // margin: auto;
+}
+
+.prevelanceContainer {
+    padding: 2% 0 2% 0;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    // background-color: red;
+}
+
+.flowerBulletPointContainer {
+    // background-color: yellow;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.prevelanceText {
+    margin-left: 1%;
+    font-weight: 800;
+}
+
+.bulletFlower {
+    width: 3vw;
+    height: 3vw;
 }
 
 .centeredText {
