--- a/styles.css
+++ b/styles.css
@@ -178,8 +178,8 @@ body::-webkit-scrollbar {
 .contentContainer {
   position: relative;
   margin: auto;
-  max-width: 80%;
-  max-height: 80%;
+  width: 80%;
+  height: 80%;
 }
 
 .contentSectionBG {
@@ -398,6 +398,7 @@ sl-card::part(body) {
 }
 
 .prevelanceContainer {
+  width: 100%;
   padding: 2% 0 2% 0;
   display: -webkit-box;
   display: -ms-flexbox;
