--- a/styles.scss
+++ b/styles.scss
@@ -150,8 +150,8 @@ body::-webkit-scrollbar {
     // color: black;
     position: relative;
     margin: auto;
-    max-width: 80%;
-    max-height: 80%;
+    width: 80%;
+    height: 80%;
     // background-color: seashell;
 }
 
@@ -345,6 +345,7 @@ sl-card::part(body) {
 }
 
 .prevelanceContainer {
+    width: 100%;
     padding: 2% 0 2% 0;
     display: flex;
     justify-content: left;
@@ -354,7 +355,7 @@ sl-card::part(body) {
 
 .flowerBulletPointContainer {
     // background-color: yellow;
-    display:flex;
+    display: flex;
     align-items: center;
     justify-content: center;
 }
