Added content to 'What is dementia' section

--- a/styles.scss
+++ b/styles.scss
@@ -152,7 +152,7 @@ body::-webkit-scrollbar {
     margin: auto;
     width: 80%;
     height: 80%;
-    // background-color: seashell;
+    // background-color: green;
 }
 
 .contentSectionBG {
