--- a/styles.scss
+++ b/styles.scss
@@ -30,11 +30,13 @@ body {
     /* Add the ability to scroll */
 }
 
+
 /* Hide scrollbar for Chrome, Safari and Opera */
 
 body::-webkit-scrollbar {
     display: none;
 }
+
 
 /* Animations */
 
@@ -44,6 +46,7 @@ body::-webkit-scrollbar {
     }
     100% {
         opacity: 0;
+        display: none;
     }
 }
 
@@ -68,7 +71,7 @@ body::-webkit-scrollbar {
     animation-duration: 5s;
     animation-delay: 3s;
     animation-fill-mode: forwards;
-    z-index: 200;
+    // z-index: 200;
 }
 
 #sadManImageContainer {
@@ -240,6 +243,7 @@ body::-webkit-scrollbar {
     background-repeat: no-repeat;
     background-size: cover;
     opacity: 0.5;
+    // z-index: -1;
 }
 
 sl-card {
@@ -394,6 +398,7 @@ sl-card::part(body) {
     max-height: 100%;
     width: 100vw;
 }
+
 
 /* For mobile phones: */
 
