--- a/styles.css
+++ b/styles.css
@@ -243,6 +243,14 @@ body::-webkit-scrollbar {
   top: 3vw;
 }
 
+.dementiaFact {
+  display: none;
+  opacity: 0;
+  position: relative;
+  background-color: orange;
+  width: 100%;
+}
+
 #brainContentSectionImageContainer {
   width: 50%;
   height: 50%;
@@ -442,8 +450,14 @@ sl-card::part(body) {
   display: none;
 }
 
-.visible {
+.visibleBlock {
   display: block;
+}
+
+.visibleFlex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .glider_custom {
