--- a/styles.scss
+++ b/styles.scss
@@ -213,6 +213,28 @@ body::-webkit-scrollbar {
     top: 3vw;
 }
 
+.dementiaFact {
+    display: none;
+    opacity: 0;
+    position: relative;
+    background-color: orange;
+    width: 100%;
+}
+
+// #fact1,
+// #fact2,
+// #fact3,
+// #fact4,
+// #fact5,
+// #fact6,
+// #fact7,
+// #fact8,
+// #fact9,
+// #fact10,
+// #fact11,
+// #fact12 {
+//     opacity: 0;
+// }
 #brainContentSectionImageContainer {
     width: 50%;
     height: 50%;
@@ -382,8 +404,12 @@ sl-card::part(body) {
     display: none;
 }
 
-.visible {
+.visibleBlock {
     display: block;
+}
+
+.visibleFlex {
+    display: flex;
 }
 
 .glider_custom {
