--- a/styles.css
+++ b/styles.css
@@ -181,6 +181,7 @@ body::-webkit-scrollbar {
   margin: auto;
   width: 80%;
   height: 80%;
+  background-color: green;
 }
 
 .contentSectionBG {
@@ -203,10 +204,14 @@ body::-webkit-scrollbar {
   font-size: 2rem;
   font-weight: 900;
   position: absolute;
-  top: 5vw;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
 
 .rttFlower::part(base) {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -216,38 +221,20 @@ body::-webkit-scrollbar {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 10vw;
-  height: 10vw;
+  line-height: normal;
+  max-width: 10vw;
+  max-height: 10vw;
   border: none;
-  margin-top: auto;
-  margin-right: auto;
+  text-align: center;
   background-color: #1d80ab;
   z-index: 1;
   cursor: pointer;
-}
-
-.rttFlower {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  max-width: 10vw;
-  max-height: 10vw;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  position: absolute;
-  right: 2vw;
-  top: 3vw;
 }
 
 .dementiaFact {
   display: none;
   opacity: 0;
   position: relative;
-  background-color: orange;
   width: 100%;
 }
 
