--- a/styles.scss
+++ b/styles.scss
@@ -155,7 +155,7 @@ body::-webkit-scrollbar {
     margin: auto;
     width: 80%;
     height: 80%;
-    // background-color: green;
+    background-color: green;
 }
 
 .contentSectionBG {
@@ -179,22 +179,31 @@ body::-webkit-scrollbar {
 .contentSectionHeading {
     font-size: 2rem;
     font-weight: 900;
+    // position: relative;
     position: absolute;
-    top: 5vw;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    // margin-left: 50%;
+    // align-self: center;
+    // top: 5vw;
+    // margin:auto;
 }
 
 .rttFlower::part(base) {
-    // position: absolute;
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 10vw;
-    height: 10vw;
+    line-height: normal;
+    max-width: 10vw;
+    max-height: 10vw;
     border: none;
+    text-align: center;
     // margin-top: 2vw;
     // margin-right: 2vw;
-    margin-top: auto;
-    margin-right: auto;
+    // margin-top: auto;
+    // margin-right: auto;
     // padding: 0;
     // margin: 0;
     background-color: rgba(29, 128, 171, 1);
@@ -202,22 +211,22 @@ body::-webkit-scrollbar {
     cursor: pointer;
 }
 
-.rttFlower {
-    display: flex;
-    max-width: 10vw;
-    max-height: 10vw;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    right: 2vw;
-    top: 3vw;
-}
+// .rttFlower {
+//     display: flex;
+//     max-width: 10vw;
+//     max-height: 10vw;
+//     align-items: center;
+//     justify-content: center;
+//     position: relative;
+//     right: 2vw;
+//     top: 3vw;
+// }
 
 .dementiaFact {
     display: none;
     opacity: 0;
     position: relative;
-    background-color: orange;
+    // background-color: orange;
     width: 100%;
 }
 
