--- a/styles.scss
+++ b/styles.scss
@@ -127,7 +127,7 @@ body::-webkit-scrollbar {
     width: 100vw;
 }
 
-.dementiaFact {
+.carouselDementiaFact {
     position: absolute;
     margin: 5vw 0 0 2vw;
     // color:black;
@@ -155,7 +155,7 @@ body::-webkit-scrollbar {
     margin: auto;
     width: 80%;
     height: 80%;
-    background-color: green;
+    // background-color: green;
 }
 
 .contentSectionBG {
@@ -191,15 +191,16 @@ body::-webkit-scrollbar {
 }
 
 .rttFlower::part(base) {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    line-height: normal;
+    // position: relative;
+    // display: flex;
+    // align-items: center;
+    // justify-content: center;
+    // line-height: normal;
     max-width: 10vw;
-    max-height: 10vw;
+    // max-height: 10vw;
+    // margin-top: 5vw;
     border: none;
-    text-align: center;
+    // text-align: center;
     // margin-top: 2vw;
     // margin-right: 2vw;
     // margin-top: auto;
@@ -207,7 +208,7 @@ body::-webkit-scrollbar {
     // padding: 0;
     // margin: 0;
     background-color: rgba(29, 128, 171, 1);
-    z-index: 1;
+    // z-index: 1;
     cursor: pointer;
 }
 
