--- a/styles.scss
+++ b/styles.scss
@@ -30,13 +30,11 @@ body {
     /* Add the ability to scroll */
 }
 
-
 /* Hide scrollbar for Chrome, Safari and Opera */
 
 body::-webkit-scrollbar {
     display: none;
 }
-
 
 /* Animations */
 
@@ -142,7 +140,7 @@ body::-webkit-scrollbar {
 .contentSection {
     position: relative;
     width: 100vw;
-    min-height: 90vh;
+    height: 90vh;
     display: flex;
     justify-content: center;
     // background-color: rgba(81, 124, 255, 1);
@@ -224,7 +222,8 @@ body::-webkit-scrollbar {
 // }
 
 .dementiaFact {
-    display: none;
+    // display: none;
+    visibility: hidden;
     opacity: 0;
     position: relative;
     // background-color: orange;
@@ -245,29 +244,62 @@ body::-webkit-scrollbar {
 // #fact12 {
 //     opacity: 0;
 // }
+
+#factsSlide1 #factsSlide2 {
+    display: none;
+}
+
 #brainContentSectionImageContainer {
-    width: 50%;
-    height: 50%;
+    width: 100%;
+    height: 100%;
     overflow: none;
     margin: auto;
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
+    position: relative;
     z-index: 2;
+    display: none;
+    opacity: 0;
+    visibility: hidden;
 }
 
 #brainImage {
     height: 100%;
     width: 50vw;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.actionFacts {
+    display: "none";
+    position: absolute;
+}
+
+#commonType1 {
+    top: 35%;
+    left: 30%;
+}
+
+#commonType2 {
+    top: 55%;
+    left: 30%;
+}
+
+#commonType3 {
+    top: 35%;
+    right: 35%;
+}
+
+#commonType4 {
+    top: 55%;
+    right: 35%;
 }
 
 .parallax {
     /* The image used */
     background-image: url("./images/sad_man.jpg");
     /* Set a specific height */
-    min-height: 80vh;
+    height: 100vh;
     width: 100vw;
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
@@ -434,7 +466,6 @@ sl-card::part(body) {
     max-height: 100%;
     width: 100vw;
 }
-
 
 /* For mobile phones: */
 
