Finished animaiton for 4 COMMON TYPES section Need to add images and content.

--- a/styles.scss
+++ b/styles.scss
@@ -367,7 +367,7 @@ sl-card::part(body) {
     position: relative;
     // margin-top: 5vw;
     width: 20vw;
-    height: auto;
+    height: 100%;
     z-index: 2;
     color: black;
 }
@@ -391,6 +391,7 @@ sl-card::part(body) {
 }
 
 .card-overview::part(base) {
+    max-height: 80%;
     display: block;
     align-items: center;
     justify-content: center;
