--- a/styles.css
+++ b/styles.css
@@ -362,7 +362,7 @@ sl-card::part(body) {
   padding: 2%;
   position: relative;
   width: 20vw;
-  height: auto;
+  height: 100%;
   z-index: 2;
   color: black;
 }
@@ -392,6 +392,7 @@ sl-card::part(body) {
 }
 
 .card-overview::part(base) {
+  max-height: 80%;
   display: block;
   -webkit-box-align: center;
       -ms-flex-align: center;
