--- a/styles.scss
+++ b/styles.scss
@@ -15,12 +15,6 @@ html,
 body {
     height: 100%;
     font-family: Montserrat;
-    /*overflow: hidden;*/
-    /*opacity: 0;
-    animation-name: fadeIn;
-    animation-duration: 4s;
-    animation-delay: 6s;
-    animation-fill-mode: forwards;*/
     // -ms-overflow-style: none;
     /* IE and Edge */
     scrollbar-width: none;
@@ -69,7 +63,6 @@ body::-webkit-scrollbar {
     animation-duration: 5s;
     animation-delay: 3s;
     animation-fill-mode: forwards;
-    // z-index: 200;
 }
 
 #sadManImageContainer {
@@ -128,12 +121,10 @@ body::-webkit-scrollbar {
 .carouselDementiaFact {
     position: absolute;
     margin: 5vw 0 0 2vw;
-    // color:black;
 }
 
 .custom_glide_Container {
     max-height: 70vh;
-    /* .......*/
     font-size: 0;
 }
 
@@ -143,26 +134,21 @@ body::-webkit-scrollbar {
     min-height: 90vh;
     display: flex;
     justify-content: center;
-    // background-color: rgba(81, 124, 255, 1);
     background-color: rgba(29, 128, 171, 1);
 }
 
 .contentContainer {
-    // color: black;
     position: relative;
     margin: auto;
     width: 80%;
     height: 80%;
-    // background-color: green;
 }
 
 .contentSectionBG {
     position: absolute;
     max-width: 100vw;
-    // height: 10vh;
     transform: translateY(100%);
     bottom: 0vh;
-    // opacity:1;
     z-index: 1;
 }
 
@@ -171,42 +157,21 @@ body::-webkit-scrollbar {
     width: 100vw;
     top: -1px;
     height: auto;
-    // z-index: 2;
 }
 
 .contentSectionHeading {
     font-size: 2rem;
     font-weight: 900;
-    // position: relative;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    // margin-left: 50%;
-    // align-self: center;
-    // top: 5vw;
-    // margin:auto;
 }
 
 .rttFlower::part(base) {
-    // position: relative;
-    // display: flex;
-    // align-items: center;
-    // justify-content: center;
-    // line-height: normal;
     max-width: 10vw;
-    // max-height: 10vw;
-    // margin-top: 5vw;
     border: none;
-    // text-align: center;
-    // margin-top: 2vw;
-    // margin-right: 2vw;
-    // margin-top: auto;
-    // margin-right: auto;
-    // padding: 0;
-    // margin: 0;
     background-color: rgba(29, 128, 171, 1);
-    // z-index: 1;
     cursor: pointer;
 }
 
@@ -222,11 +187,9 @@ body::-webkit-scrollbar {
 // }
 
 .dementiaFact {
-    // display: none;
     visibility: hidden;
     opacity: 0;
     position: relative;
-    // background-color: orange;
     width: 100%;
 }
 
@@ -296,18 +259,27 @@ body::-webkit-scrollbar {
 }
 
 .parallax {
-    /* The image used */
     background-image: url("./images/sad_man.jpg");
-    /* Set a specific height */
     height: 100vh;
     width: 100vw;
-    /* Create the parallax scrolling effect */
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     opacity: 0.5;
-    // z-index: -1;
+}
+
+#symptom1,
+#symptom2,
+#symptom3,
+#symptom4,
+#symptom5,
+#symptom6,
+#symptom7,
+#symptom8,
+#symptom9,
+#symptom10 {
+    visibility: hidden;
 }
 
 sl-card {
@@ -324,7 +296,6 @@ sl-card body {
     max-width: 20vw;
     max-height: 50vw;
     color: black;
-    // box-shadow: 15px 15px 10px 0px rgba(50, 50, 50, 0.75);
 }
 
 .card-overview {
@@ -365,7 +336,6 @@ sl-card::part(body) {
 .cardContainer {
     padding: 2%;
     position: relative;
-    // margin-top: 5vw;
     width: 20vw;
     height: 100%;
     z-index: 2;
@@ -395,17 +365,12 @@ sl-card::part(body) {
     display: block;
     align-items: center;
     justify-content: center;
-    // background-color: chartreuse;
-    // width: 400px;
 }
 
 .card-overview::part(body) {
-    // width: 100%;
     display: block;
     align-items: center;
     justify-content: center;
-    // background-color: chartreuse;
-    // width: 400px;
 }
 
 // .dementiaTypeCard {
@@ -414,20 +379,24 @@ sl-card::part(body) {
 // margin: auto;
 // }
 
+.prevelanceContainers {
+    display: none;
+}
+
 .prevelanceContainer {
+    visibility: hidden;
     width: 100%;
     padding: 2% 0 2% 0;
-    display: none;
     justify-content: left;
     align-items: center;
-    // background-color: red;
 }
 
 .symptomContainer {
     display: none;
+    height: 15vh;
 }
 
-.symptomRow .symptomContainer{
+.symptomRow .symptomContainer {
     visibility: hidden;
 }
 
@@ -436,7 +405,6 @@ sl-card::part(body) {
 }
 
 .flowerBulletPointContainer {
-    // background-color: yellow;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -488,19 +456,12 @@ sl-card::part(body) {
 }
 
 .livingSVG {
-    // vertical-align: bottom;
-    // max-width: 10vw;
-    // margin: auto;
     width: 100%;
     height: 100%;
-    // padding: auto;
-    // bottom:auto;
-    // top:auto;
 }
 
 .footerIconsContainer {
     width: 100%;
-    // background-color: orange;
     position: absolute;
     bottom: 0;
     display: flex;
@@ -509,14 +470,9 @@ sl-card::part(body) {
 }
 
 .footerIconDiv {
-    // background-color: aqua;
     margin: auto;
     max-width: 15vw;
     max-height: 15vw;
-    // display:flex;
-    // align-items: center;
-    // position:relative;
-    // padding:auto;
 }
 
 @media only screen and (min-width: 480px) {
