Minor changes to gallery layout and sizing

--- a/styles.css
+++ b/styles.css
@@ -415,6 +415,11 @@ sl-card::part(body) {
           justify-content: center;
 }
 
+.dialog-overview::part(body) {
+  max-height: 80%;
+  width: auto;
+}
+
 .prevelanceContainers {
   display: none;
 }
