Minor changes to GALLERY section

--- a/styles.css
+++ b/styles.css
@@ -418,6 +418,7 @@ sl-card::part(body) {
 .dialog-overview::part(body) {
   max-height: 80%;
   width: auto;
+  --width: 50%;
 }
 
 .prevelanceContainers {
