--- a/styles.css
+++ b/styles.css
@@ -233,7 +233,7 @@ body::-webkit-scrollbar {
 }
 
 #brainImage {
-  height: 100%;
+  height: 80vh;
   width: 50vw;
   position: absolute;
   top: 50%;
@@ -249,22 +249,22 @@ body::-webkit-scrollbar {
 
 #commonType1 {
   top: 35%;
-  left: 30%;
+  left: 25%;
 }
 
 #commonType2 {
   top: 55%;
-  left: 30%;
+  left: 25%;
 }
 
 #commonType3 {
   top: 35%;
-  right: 35%;
+  right: 30%;
 }
 
 #commonType4 {
   top: 55%;
-  right: 35%;
+  right: 30%;
 }
 
 .parallax {
@@ -307,7 +307,7 @@ sl-card body {
   color: black;
 }
 
-.card-overview {
+.card-overview::part(base) {
   position: relative;
   height: 100%;
   width: 100%;
@@ -365,7 +365,7 @@ sl-card::part(body) {
   padding: 2%;
   position: relative;
   width: 20vw;
-  height: 100%;
+  max-height: 100%;
   z-index: 2;
   color: black;
 }
