--- a/styles.css
+++ b/styles.css
@@ -107,7 +107,7 @@ body::-webkit-scrollbar {
   bottom: 25vh;
 }
 
-.flower {
+.thumbnailImage {
   width: 100%;
   height: 100%;
 }
@@ -156,6 +156,22 @@ body::-webkit-scrollbar {
   font-size: 0;
 }
 
+.contentHeader {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 10vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .contentSection {
   position: relative;
   width: 100vw;
@@ -166,6 +182,9 @@ body::-webkit-scrollbar {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-color: #1d80ab;
 }
 
@@ -387,6 +406,7 @@ sl-card::part(body) {
 .cardImage {
   width: 100%;
   height: 100%;
+  border-radius: 8px 8px 0 0;
 }
 
 .contentImageContainer {
