--- a/styles.css
+++ b/styles.css
@@ -406,7 +406,13 @@ sl-card::part(body) {
 .cardImage {
   width: 100%;
   height: 100%;
-  border-radius: 8px 8px 0 0;
+  border-radius: 8px 8px 8px 8px;
+}
+
+.cardThumbnailImage {
+  width: 100%;
+  height: 100%;
+  border-radius: 8px 8px 8px 8px;
 }
 
 .contentImageContainer {
