--- a/styles.scss
+++ b/styles.scss
@@ -364,7 +364,13 @@ sl-card::part(body) {
 .cardImage {
     width: 100%;
     height: 100%;
-    border-radius: 8px 8px 0 0;
+    border-radius: 8px 8px 8px 8px;
+}
+
+.cardThumbnailImage {
+    width: 100%;
+    height: 100%;
+    border-radius: 8px 8px 8px 8px;
 }
 
 .contentImageContainer {
