--- a/styles.scss
+++ b/styles.scss
@@ -270,14 +270,14 @@ body::-webkit-scrollbar {
 }
 
 .parallax {
-    background-image: url("./images/sad_man.jpg");
+    background-image: url("./images/sad_man_parallax.png");
     height: 100vh;
     width: 100vw;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    opacity: 0.5;
+    opacity: 1;
 }
 
 #symptom1,
