--- a/styles.css
+++ b/styles.css
@@ -222,10 +222,19 @@ body::-webkit-scrollbar {
 }
 
 .rttFlower::part(base) {
-  max-width: 10vw;
   border: none;
   background-color: #1d80ab;
   cursor: pointer;
+}
+
+.rttFlower {
+  position: relative;
+  height: 10vh;
+  width: 10vh;
+}
+
+.rttFlower:hover::part(base) {
+  color: white;
 }
 
 .dementiaFact {
@@ -310,14 +319,6 @@ body::-webkit-scrollbar {
   visibility: hidden;
 }
 
-sl-card {
-  max-height: 100%;
-}
-
-sl-card body {
-  background-color: purple;
-}
-
 .card {
   position: relative;
   margin: 10% 2% 2% 2%;
@@ -384,7 +385,16 @@ sl-card::part(body) {
   padding: 2%;
   position: relative;
   width: 20vw;
-  max-height: 100%;
+  max-height: 80%;
+  z-index: 2;
+  color: black;
+}
+
+.galleryCardContainer {
+  max-height: 80%;
+  padding: 2%;
+  position: relative;
+  width: 20vw;
   z-index: 2;
   color: black;
 }
@@ -406,6 +416,12 @@ sl-card::part(body) {
 .cardImage {
   width: 100%;
   height: 100%;
+  border-radius: 8px 8px 0 0;
+}
+
+.galleryCardImage {
+  width: 100%;
+  height: 100%;
   border-radius: 8px 8px 8px 8px;
 }
 
@@ -421,7 +437,7 @@ sl-card::part(body) {
 }
 
 .card-overview::part(base) {
-  max-height: 80%;
+  height: 100%;
   display: block;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -432,6 +448,7 @@ sl-card::part(body) {
 }
 
 .card-overview::part(body) {
+  height: 100%;
   display: block;
   -webkit-box-align: center;
       -ms-flex-align: center;
