--- a/styles.scss
+++ b/styles.scss
@@ -24,13 +24,11 @@ body {
     /* Add the ability to scroll */
 }
 
-
 /* Hide scrollbar for Chrome, Safari and Opera */
 
 body::-webkit-scrollbar {
     display: none;
 }
-
 
 /* Animations */
 
@@ -182,10 +180,26 @@ body::-webkit-scrollbar {
 }
 
 .rttFlower::part(base) {
-    max-width: 10vw;
+    // width: 10vh;
+    // margin-right: 10vw;
+    // margin-top: 10vw;
+    // display: flex;
+    //     align-items: center;
+    // justify-content: center;
+    // position: relative;
     border: none;
     background-color: rgba(29, 128, 171, 1);
     cursor: pointer;
+}
+
+.rttFlower {
+    position: relative;
+    height: 10vh;
+    width: 10vh;
+}
+
+.rttFlower:hover::part(base) {
+    color: white;
 }
 
 // .rttFlower {
@@ -293,13 +307,13 @@ body::-webkit-scrollbar {
     visibility: hidden;
 }
 
-sl-card {
-    max-height: 100%;
-}
+// sl-card {
+//     max-height: 100%;
+// }
 
-sl-card body {
-    background-color: purple;
-}
+// sl-card body {
+//     background-color: purple;
+// }
 
 .card {
     position: relative;
@@ -348,7 +362,16 @@ sl-card::part(body) {
     padding: 2%;
     position: relative;
     width: 20vw;
-    max-height: 100%;
+    max-height: 80%;
+    z-index: 2;
+    color: black;
+}
+
+.galleryCardContainer {
+    max-height: 80%;
+    padding: 2%;
+    position: relative;
+    width: 20vw;
     z-index: 2;
     color: black;
 }
@@ -362,6 +385,12 @@ sl-card::part(body) {
 }
 
 .cardImage {
+    width: 100%;
+    height: 100%;
+    border-radius: 8px 8px 0 0;
+}
+
+.galleryCardImage {
     width: 100%;
     height: 100%;
     border-radius: 8px 8px 8px 8px;
@@ -379,13 +408,14 @@ sl-card::part(body) {
 }
 
 .card-overview::part(base) {
-    max-height: 80%;
+    height: 100%;
     display: block;
     align-items: center;
     justify-content: center;
 }
 
 .card-overview::part(body) {
+    height: 100%;
     display: block;
     align-items: center;
     justify-content: center;
@@ -471,7 +501,6 @@ sl-card::part(body) {
     max-height: 100%;
     width: 100vw;
 }
-
 
 /* For mobile phones: */
 
