--- a/styles.css
+++ b/styles.css
@@ -192,12 +192,12 @@ body::-webkit-scrollbar {
   position: relative;
   margin: auto;
   width: 80%;
-  height: 80%;
+  height: 90%;
 }
 
 .contentSectionBG {
   position: absolute;
-  max-width: 100vw;
+  width: 100vw;
   -webkit-transform: translateY(100%);
           transform: translateY(100%);
   bottom: 0vh;
@@ -207,7 +207,7 @@ body::-webkit-scrollbar {
 .backgroundImage {
   position: relative;
   width: 100vw;
-  top: -1px;
+  margin-top: -.1%;
   height: auto;
 }
 
@@ -273,11 +273,14 @@ body::-webkit-scrollbar {
 .actionFacts {
   display: "none";
   position: absolute;
+  background-color: red;
 }
 
 #commonType1 {
   top: 35%;
   left: 25%;
+  -webkit-transform: translateX(-35%, -25%);
+          transform: translateX(-35%, -25%);
 }
 
 #commonType2 {
