--- a/styles.scss
+++ b/styles.scss
@@ -152,21 +152,21 @@ body::-webkit-scrollbar {
     position: relative;
     margin: auto;
     width: 80%;
-    height: 80%;
+    height: 90%;
 }
 
 .contentSectionBG {
     position: absolute;
-    max-width: 100vw;
+    width: 100vw;
     transform: translateY(100%);
-    bottom: 0vh;
+    bottom: 0vh;    
     z-index: 1;
 }
 
 .backgroundImage {
     position: relative;
     width: 100vw;
-    top: -1px;
+    margin-top: -.1%;
     height: auto;
 }
 
@@ -261,11 +261,13 @@ body::-webkit-scrollbar {
 .actionFacts {
     display: "none";
     position: absolute;
+    background-color: red;
 }
 
 #commonType1 {
     top: 35%;
     left: 25%;
+    transform: translateX(-35%, -25%);
 }
 
 #commonType2 {
