--- a/styles.css
+++ b/styles.css
@@ -261,8 +261,8 @@ body::-webkit-scrollbar {
 }
 
 #brainImage {
-  height: 80vh;
-  width: 50vw;
+  width: 60vw;
+  height: auto;
   position: absolute;
   top: 50%;
   left: 50%;
