--- a/styles.css
+++ b/styles.css
@@ -156,6 +156,16 @@ body::-webkit-scrollbar {
   font-size: 0;
 }
 
+.downArrow {
+  position: absolute;
+  top: 90%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  height: 8%;
+  width: auto;
+}
+
 .contentHeader {
   position: absolute;
   top: 0;
