--- a/styles.css
+++ b/styles.css
@@ -216,7 +216,7 @@ body::-webkit-scrollbar {
 .backgroundImage {
   position: relative;
   width: 100vw;
-  margin-top: -.1%;
+  margin-top: -0.1%;
   height: auto;
 }
 
@@ -559,8 +559,9 @@ sl-card::part(body) {
 }
 
 .gliderImage {
-  max-height: 100%;
-  width: 100vw;
+  max-height: auto;
+  max-width: 100vw;
+  background-color: #1d80ab;
 }
 
 /* For mobile phones: */
@@ -590,6 +591,10 @@ sl-card::part(body) {
   margin: auto;
   max-width: 15vw;
   max-height: 15vw;
+}
+
+.ulIndent {
+  margin-left: 5%;
 }
 
 @media only screen and (min-width: 480px) {
