--- a/styles.scss
+++ b/styles.scss
@@ -21,13 +21,11 @@ body {
     /* Add the ability to scroll */
 }
 
-
 /* Hide scrollbar for Chrome, Safari and Opera */
 
 body::-webkit-scrollbar {
     display: none;
 }
-
 
 /* Animations */
 
@@ -174,7 +172,7 @@ body::-webkit-scrollbar {
 .backgroundImage {
     position: relative;
     width: 100vw;
-    margin-top: -.1%;
+    margin-top: -0.1%;
     height: auto;
 }
 
@@ -203,8 +201,8 @@ body::-webkit-scrollbar {
     color: white;
 }
 
-.dementiaFacts{
-    position:relative;
+.dementiaFacts {
+    position: relative;
     text-align: center;
     margin-left: 1%;
 }
@@ -469,10 +467,10 @@ sl-card::part(body) {
 }
 
 .gliderImage {
-    max-height: 100%;
-    width: 100vw;
+    max-height: auto;
+    max-width: 100vw;
+    background-color: rgba(29, 128, 171, 1);
 }
-
 
 /* For mobile phones: */
 
@@ -498,6 +496,10 @@ sl-card::part(body) {
     margin: auto;
     max-width: 15vw;
     max-height: 15vw;
+}
+
+.ulIndent{
+    margin-left: 5%;
 }
 
 @media only screen and (min-width: 480px) {
